tempfile/derive_more/tests/compile_fail/into/mixed_regular_and_wrapped_types.rs
#[derive(derive_more::Into)]
#[into(owned, ref(i32), i32)]
struct Foo {
    bar: i32,
}

fn main() {}
